<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android=>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:paddingTop="30dp" />

    <EditText

        android:id="@+id/ed_email"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/please_enter_your_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/Confirm"

        />
    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Hello World!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
    <!--</androidx.Linearlayout.widget.LinearLayout>-->
</LinearLayout>